Gets rid of errors in editing table cells.